-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Server Security
-
Fully Compatible
-
ALL
-
Server Security 2025-09-12, Server Security 2025-09-26, Server Security 2025-10-10
-
None
-
None
-
None
-
None
-
None
-
None
-
None
This test is currently failing to be run in remote execution, likely due to it calling out to the ldap test server. Please either add the ability to hit the ldap test server from EngFlow, or move it out into a standalone integration test outside of the main unit tests.
Once this is done, please remove the tag "incompatible_with_bazel_remote_test" from the test definition.
This is currently preventing us from switching all unit tests over to be run in remote execution, slowing down CI runs and costing several thousand dollars in infra spend a month.
To reproduce the issue, run "bazel test --strategy=TestRunner=remote +sasl_authentication_session_gssapi_test"
Please ask in #ask-devprod-build if you run into any issues
- related to
-
SERVER-112157 Enable GSSAPI test to run on Amazon Linux build variants
-
- Closed
-