SERVER-109788 Convert sasl_authentication_session_gssapi_test unit test to jstest (#42331)

GitOrigin-RevId: 3103ff7305bda68d04fc84361af7fd677752b45a